[package]
name = "find_doubles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.3.21", features = ["derive"] }
fastmurmur3 = "0.2.0"
#fasthash = "0.4.0"
glob = "0.3.1"
meowhash = "0.3.0"

[dependencies.windows]
version = "0.51"
features = ["Win32_Storage_FileSystem", "Win32_Foundation"]
