[package]
name = "find_doubles"
version = "0.9.0"
edition = "2021"
authors = ["Christian Kumpf"]
description = "find duplicate files and optionally replace duplicates by hard links"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.3.21", features = ["derive"] }
digest = "0.10.7"
fastmurmur3 = "0.2.0"
#fasthash = "0.4.0"
glob = "0.3.1"
sha2 = "0.10.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = ["Win32_Storage_FileSystem", "Win32_Foundation"]}
